--- a/Todos_v1/index3.html
+++ b/Todos_v1/index3.html
@@ -34,9 +34,7 @@
 </head>
 
 <body>
-  <form>
-    <input type="text" class="todo-input" placeholder="Enter todo!" autofocus />
-  </form>
+  <input type="text" class="todo-input" placeholder="Enter todo!" autofocus />
   <ul class="todo-list"></ul>
   <ul class="todo-filters">
     <li id="all" class="active">All</li>
@@ -57,11 +55,11 @@
     // 렌더
     const render = () => {
 
-      const _todos = todos.filter(todo =>
-        currentFilter === 'all' ? true : currentFilter === 'completed' ? todo.completed : !todo.completed
-      )
+      // const _todos = todos.filter(todo =>
+      //   currentFilter === 'all' ? true : currentFilter === 'completed' ? todo.completed : !todo.completed
+      // )
 
-      $todoList.innerHTML = _todos.map(({ id, content, completed }) => `
+      $todoList.innerHTML = todos.map(({ id, content, completed }) => `
         <li id="${id}">
         <input type="checkbox" ${completed ? 'checked' : ''}/>
         <span>${content}</span>
@@ -72,6 +70,12 @@
 
     const setTodos = newTodos => {
       todos = newTodos;
+      console.log('[todos]', todos)
+      render()
+    }
+
+    const setCurrentFilter = newCurrentFilter => {
+      currentFilter = newCurrentFilter;
       render()
     }
 
@@ -89,46 +93,24 @@
 
     // 할일 추가
     const addTodo = content => {
-
       setTodos([{ id: generateNextid(), content, completed: false }, ...todos])
     }
 
     // 할일 check
 
     const toggleCompletedById = id => {
-      todos = todos.map(todo => (todo.id === +id ? { ...todo, completed: !todo.completed } : todo))
-      render()
+      setTodos(todos.map(todo => (todo.id === +id ? { ...todo, completed: !todo.completed } : todo)))
     }
-    // render(todos)
-
-    // const completedTodos = () => {
-    //   const filterTodos = todos.filter(todo => todo.completed)
-    //   render(filterTodos)
-    // }
-    // const activeTodos = () => {
-    //   const filterTodos = todos.filter(todo => !todo.completed)
-    //   render(filterTodos)
-    // }
 
 
     // 할일 제거
     const removeTodo = id => {
-      todos = todos.filter(todo => todo.id !== +id);
-      render()
+      setTodos(todos.filter(todo => todo.id !== +id))
     }
 
-
-
-    const setCurrentFilter = newCurrentFilter => {
-      currentFilter = newCurrentFilter;
-      render()
-    }
 
     // 할일 필터링
 
-    // const filteringTodo = ()=>{
-    //   todos = todos.filter(todo=> todo.completed)
-    // }
 
 
     /* 이벤트 핸들러 */
@@ -136,27 +118,19 @@
 
 
     // 할일 추가
-    document.querySelector('form').addEventListener('submit', e => {
+    $todoInput.addEventListener('keyup', e => {
       e.preventDefault();
 
+      const content = e.target.value;
+
       // 아무것도 안치면 안넘어가게
-      if ($todoInput.value === '') return;
+      if (e.key !== 'Enter' || content.trim() === '') return;
       if (e.isComposing || e.keyCord === 229) return;
 
-      const content = $todoInput.value;
       addTodo(content);
 
-      $todoInput.value = '';
+      e.target.value = '';
     });
-
-
-    // 할일 check
-
-
-    // $todoFilters.addEventListener('change', e => {
-    //   if (e.target.matches('input[type=checkbox]'))
-
-    // })
 
     // 할일 제거
     $todoList.addEventListener('click', e => {
@@ -167,7 +141,7 @@
 
 
     $todoList.addEventListener('click', e => {
-      if (e.target.matches('input[type=checkbox]')) {
+      if (!e.target.matches('input[type=checkbox]')) {
         toggleCompletedById(e.target.parentNode.id);
         console.log(todos);
         // render()
@@ -184,16 +158,6 @@
 
       setCurrentFilter(currentFilter)
 
-
-      // if (e.target.id === 'completed') {
-      //   completedTodos()
-      // }
-      // if (e.target.id === 'active') {
-      //   activeTodos()
-      // }
-      // if (e.target.id === 'all') {
-      //   render()
-      // }
     })
 
 
